// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly with defaults 1`] = `
.emotion-4 {
  z-index: 1;
}

.emotion-3 {
  font-size: 1.125rem;
  font-weight: 700;
  background: #323232;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0 0 15px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  justify-self: left;
}

.emotion-2 {
  background: none;
  height: 65px;
  padding: 0;
  line-height: 0;
  border: none;
  width: 52px;
  cursor: pointer;
}

.emotion-1 {
  fill: white;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <span
      className="emotion-0"
    />
    <button
      aria-label=""
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <CrossIcon
        className="emotion-1"
        height="32px"
        width="32px"
      />
    </button>
  </div>
</div>
`;

exports[`Header renders correctly with props provided 1`] = `
.emotion-5 {
  z-index: 1;
}

.emotion-4 {
  font-size: 1.125rem;
  font-weight: 700;
  background: #323232;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 0 0 15px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  justify-self: left;
}

.emotion-3 {
  background: none;
  height: 65px;
  padding: 0;
  line-height: 0;
  border: none;
  width: 52px;
  cursor: pointer;
}

.emotion-2 {
  fill: white;
}

.emotion-0 {
  fill: #fff;
  margin-right: 8px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <DummyIcon
      className="emotion-0"
      height="32px"
      width="32px"
    />
    <span
      className="emotion-1"
    >
      header label
    </span>
    <button
      aria-label="close"
      className="emotion-3"
      onClick={[Function]}
      type="button"
    >
      <CrossIcon
        className="emotion-2"
        height="32px"
        width="32px"
      />
    </button>
  </div>
</div>
`;
